Fix vertical-align

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -204,7 +204,7 @@
 /* Fix of vertical-align: -0.125em; */
 .anticon {
   /* vertical-align: unset !important; */
-  vertical-align: 0.1em !important;
+  vertical-align: 0.08em !important;
 }
 .ant-btn {
   /* display: inline-flex !important; */
